syntax = "proto3";
package pb;

message Lottery {
    int64  id = 1;
    int64  wid = 2;
    int64  activityId = 3;
    string name = 4;
    string desc = 5;
    int64  totalNum = 6;
    int64  claimedNum = 7;
    int32  probability = 8;
    int64  firstCodeId = 9;
    string level = 10;
    int64  createdAt = 11;
    int64  updatedAt = 12;
}

message LotteryList {
    int64 index = 1;
    int64 limit = 2;
    int64 total = 3;
    repeated Lottery lotteries = 4;
}
message requestWidAndActivityId {
    int64  wid = 1;
    int64  activityId = 2;
}